Support wildcards in message source path